--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
     />
-    <title>WeeStagram4</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">    <title>WeeStagram4</title>
   </head>
+
   <body>
     <div id="root"></div>
   </body>
